--- a/join.html
+++ b/join.html
@@ -175,7 +175,7 @@
         </div>
     </div>
     <div class="footLink">
-        <a href="index.html">홈</a>
+        <a href="index.html">with milonga</a>
         <a href="map.html">검색</a>
         <a href="#">도움말</a>
     </div>
