--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                 <a class="moremap" href="#">지도로 더보기</a>
             </div>
             <div class="footLink f_b">
-                <a class="home" href="index.html">with milonga</a>
+                <a class="home" href="index.html">&milonga</a>
                 <a class="search" href="map.html">검색</a>
                 <a  class="about" href="#">도움말</a>
             </div>
