--- a/join.html
+++ b/join.html
@@ -2,183 +2,104 @@
 <html lang="en">
 
 <head>
+    <title>Document</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css" text="text/css">
-    <title>Document</title>
+    <link rel="stylesheet" href="css/join.css" text="text/css">
+
+
+
 </head>
 
 <body>
-    <div class="header">
-        <h2>탱고카페</h2>
-        <a href="index.html">홈으로</a>
-    </div>
-    <div class="milonga section">
-        <h3>탱고카페</h3>
-        <div class="txt">
-            <span>충무로역</span>
-            <span>탱고레슨, 밀롱가</span>
+    <div class="background">
+
+
+        <div class="look">
+            <div class="look-list">
+                <h2>최근 본 밀롱가</h2>
+                <div class="data-wrap">
+                    <ul class="today-wrap">
+                        <li>
+                            <a href="#">
+                                <div class="thumb">
+                                    <img src="img/onada.jpg" alt="">
+                                </div>
+                                <div class="summary">
+                                    <h3>1.Tango O Nada 1,2</h3>
+                                    <small>서울특별시 마포구 동교동 동교로 193(193, Donggyo-ro, Mapo-gu,Seoul, Korea)/서울특별시 마포구 연남동
+                                        성미산로 81(187 Seongmisan-ro, Seoul,Korea)</small>
+
+
+                                </div>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="like">
+            <div class="like-list">
+                <h2>좋아요 한 밀롱가</h2>
+                <div class="data-wrap">
+                    <ul class="today-wrap">
+                        <li>
+                            <a href="#">
+                                <div class="thumb">
+                                    <img src="img/onada.jpg" alt="">
+                                </div>
+                                <div class="summary">
+                                    <h3>1.Tango O Nada 1,2</h3>
+                                    <small>서울특별시 마포구 동교동 동교로 193(193, Donggyo-ro, Mapo-gu,Seoul, Korea)/서울특별시 마포구 연남동
+                                        성미산로 81(187 Seongmisan-ro, Seoul,Korea)</small>
+
+
+                                </div>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="review">
+            <div class="review-list">
+                <h2>나의 밀롱가 Review</h2>
+                <div class="data-wrap">
+                    <ul class="today-wrap">
+                        <li>
+                            <a href="#">
+                                <div class="thumb">
+                                    <img src="img/onada.jpg" alt="">
+                                </div>
+                                <div class="summary">
+                                    <h3>1.Tango O Nada 1,2</h3>
+                                    <small>서울특별시 마포구 동교동 동교로 193(193, Donggyo-ro, Mapo-gu,Seoul, Korea)/서울특별시 마포구 연남동
+                                        성미산로 81(187 Seongmisan-ro, Seoul,Korea)</small>
+
+
+                                </div>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </div>
 
-    </div>
-    <div class="m_score">
-        <div class="star area">
-            <span>
-                <li></li>
-            </span>
-            <span>
-                <li></li>
-            </span>
-            <span>
-                <li></li>
-            </span>
-            <span>
-                <li></li>
-            </span>
-            <span>
-                <li></li>
-            </span>
-            <span>
-                <li></li>
-            </span>
-            4.1
-            <button></button>
+
+        <div class="footLink f_b">
+            <a class="home" href="index.html">&milonga</a>
+            <a class="search" href="join.html">나의 밀롱가</a>
+            <a class="about" href="#">도움말</a>
         </div>
-    </div>
-    <div class="btn_list">
-        <div class="like">
-        <div class="off"></div>
-        <span class="num">371</span>
-        좋아요
-        <a href="#"></a>
-    </div>
-    </div>
-    <div class="appraisal">
-        <div class="num">39</div>
-        평가보기
-        <button></button>
-    </div>
-    <a class="kakao" href="#">카톡공유</a>
-    <div class="slider">
-        <ul>
-            <li>
-                <img src="#" alt="">
-            </li>
-            <li>
-                <img src="#" alt="">
-            </li>
-            <li>
-                <img src="#" alt="">
-            </li>
-        </ul>
-    </div>
-    <div class="detail">
-        <div class="locaton">
-            <span>주소</span>
-            <span class="mapGo"></span>
-            <button></button>
+        <div class="footLink-back f_b">
+            <a class="home" href="index.html">&milonga</a>
+            <a class="search" href="join.html">나의 밀롱가</a>
+            <a class="about" href="#">도움말</a>
         </div>
-        <div class="tel">
-            <span>전화</span>
-            <span class="telGo"></span>
-            <button></button>
-        </div>
-        <div class="keyword">
-            <span>주차가능</span>
-      </div>
-        <div class="date">
-            토
-            <span class="time">오후 7시 - 오후 10시</span>
-        </div>
-        <div class="modify">
-            <span>폐업신고·정보수정제안</span>
-            <button></button>
-        </div>
-        <div class="share">
-            <span>sns공유</span>
-            <button></button>
-        </div>
-    </div>
-    <div class="section gps">
-        <p class="title">위치정보</p>
-        <div class="map"></div>
-    </div>
-    <div class="section search">
-        <p class="title">주변 밀롱가 더 검색해보기</p>
-        <a href="#"></a>
-    </div>
-    <div class="review-list">
-        <div class="review-item">
-            <div class="user_info">
-                <div class="thumb">
-                    <img src="#" alt="">
-                </div>
-                <div class="summary">
-                 <span class="name">momo</span>
-                 <div class="score">
-                     <span class="icon">
-                        <p><img src="#" alt=""></p> 
-                        30곳
-                     </span>
-                     <span class="icon">
-                        <p><img src="#" alt=""></p> 
-                        115개
-                     </span>
-                     <span class="icon">
-                        <p><img src="#" alt=""></p> 
-                        12명
-                     </span>
-                                     </div>
-                </div>
-            </div>
-            <div class="photo_list">
-                <div class="slide">
-                <ul>
-                    <li>
-                        <img src="#" alt="">
-                    </li>
-                </ul>
-                </div>
-            </div>
-            <div class="review_info">
-                <div class="score">
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                </div>
-                <div class="update">
-                    2020.08.10.
-                </div>
-               <div class="contents-wrap">
-                <div class="contents">
-                    내용
-                </div>
-                <button>더보기</button>
-               </div> 
-               <div class="tag-list">
-                   <a href="#">#탱고레슨</a>
-                   <a href="#">#밀롱가</a>
-                   <a href="#">#동호회</a>
-               </div>
-               <div class="favorite-info">
-                   <span class="btn_like"></span>
-                   <div>
-                     <strong>밀어</strong>
-                     <span>님 외</span>
-                     <strong>6명</strong>
-                    <span>이 좋아합니다.</span>
-                   </div>
-               </div>
-            </div>
-        </div>
-    </div>
-    <div class="footLink">
-        <a href="index.html">with milonga</a>
-        <a href="map.html">검색</a>
-        <a href="#">도움말</a>
-    </div>
+
+
 </body>
+
+
 
 </html>
