--- a/join.html
+++ b/join.html
@@ -12,9 +12,31 @@
 </head>
 
 <body>
+    <div class="header">
+        <p>나의 y milonga</p>
+    </div>
+    <div class="headerback">
+        <p>나의 y milonga</p>
+    </div>
+          
     <div class="background">
 
+        <div class="profile">
+            <div class="pf_img f_c">
+                <a href="#"><img src="img/ic_person-off.png" alt=""></a>
+                <p>Ju Young Jung</p>
+            </div>
+            <div class="myinfo">
+                <div class="follow">
+                    <div class="info_view">
+                        <a href="#" class="view"></a>
+                        <a href="#" class="reset"></a>
+                        <a href="#" class="point"></a>
+                    </div>
 
+                </div>
+            </div>
+        </div>
         <div class="look">
             <div class="look-list">
                 <h2>최근 본 밀롱가</h2>
