--- a/join.html
+++ b/join.html
@@ -24,17 +24,14 @@
         <div class="profile">
             <div class="pf_img f_c">
                 <a href="#"><img src="img/ic_person-off.png" alt=""></a>
-                <p>Ju Young Jung</p>
+                <p class="name">Ju Young Jung</p>
             </div>
             <div class="myinfo">
-                <div class="follow">
-                    <div class="info_view">
-                        <a href="#" class="view"></a>
-                        <a href="#" class="reset"></a>
-                        <a href="#" class="point"></a>
-                    </div>
-
-                </div>
+                <div class="follow f_a">
+                    <a href="#" class="view">나의 프로필 보기</a>
+                    <a href="#" class="reset">나의 정보 수정</a>
+                    <a href="#" class="point">나의 ymilonga 포인트</a>
+                         </div>
             </div>
         </div>
         <div class="look">
