--- a/info.html
+++ b/info.html
@@ -174,10 +174,15 @@
             </div>
         </div>
     </div>
-    <div class="footLink">
-        <a href="index.html">with milonga</a>
-        <a href="map.html">검색</a>
-        <a href="#">도움말</a>
+    <div class="footLink f_b">
+        <a class="home" href="index.html">&milonga</a>
+        <a class="search" href="join.html">나의 밀롱가</a>
+        <a class="about" href="help.html">도움말</a>
+    </div>
+    <div class="footLink-back f_b">
+        <a class="home" href="index.html">&milonga</a>
+        <a class="search" href="join.html">나의 밀롱가</a>
+        <a class="about" href="help.html">도움말</a>
     </div>
 </body>
 
