--- a/index.html
+++ b/index.html
@@ -259,12 +259,12 @@
     <div class="footLink f_b">
         <a class="home" href="index.html">&milonga</a>
         <a class="search" href="join.html">나의 밀롱가</a>
-        <a  class="about" href="#">도움말</a>
+        <a class="about" href="help.html">도움말</a>
     </div>
     <div class="footLink-back f_b">
         <a class="home" href="index.html">&milonga</a>
         <a class="search" href="join.html">나의 밀롱가</a>
-        <a  class="about" href="#">도움말</a>
+        <a class="about" href="help.html">도움말</a>
     </div>
 </body>
 
