--- a/calender.html
+++ b/calender.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/calender.css" text="text/css">
    
-    <link href='css/main.css' rel='stylesheet' />
+    <link href='css/main.css' rel='stylesheet'>
     <script src='js/main.js'></script>
 
 </head>
@@ -163,16 +163,17 @@
                 <div class="calender" id="calender"></div>
             </div>
         </div>
-        <div class="footLink f_b">
+         <div class="footLink f_b">
             <a class="home" href="index.html">&milonga</a>
             <a class="search" href="join.html">나의 밀롱가</a>
-            <a  class="about" href="#">도움말</a>
+            <a class="about" href="help.html">도움말</a>
         </div>
         <div class="footLink-back f_b">
             <a class="home" href="index.html">&milonga</a>
             <a class="search" href="join.html">나의 밀롱가</a>
-            <a  class="about" href="#">도움말</a>
+            <a class="about" href="help.html">도움말</a>
         </div>
+
 
 
 </body>
