calender style change

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div class="inputarea f_b">
                 <input type="text" value placeholder="밀롱가 검색하기">
                 <div>
-                    <img src="img/ic_search.png" alt="">
+                    <a href="#"><img src="img/ic_search.png" alt=""></a>
                 </div>
             </div>
         </div>
