--- a/join.html
+++ b/join.html
@@ -20,7 +20,13 @@
     </div>
           
     <div class="background">
-
+        <div class="login">
+            <p>로그인 하시고 나만의 milonga 관리와
+                 y milonga 포인트 적립 등의 혜택을 누리세요.</p>
+            <a class="f_c" href="login.html">
+                <span class="f_c">로그인</span>
+            </a>
+        </div>
         <div class="profile">
             <div class="pf_img f_c">
                 <a href="#"><img src="img/ic_person-off.png" alt=""></a>
