--- a/calender.html
+++ b/calender.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/calender.css" text="text/css">
 
-    <link href='css/main.css' rel='stylesheet'>
+    <link href='css/main.css' rel='stylesheet' text="text/css">
     <script src='js/main.js'></script>
     <script src='js/calender.js'></script>
 
@@ -43,7 +43,9 @@
             background: #f6b37f;
             border-color: #fff;
         }
-
+        .fc-event-time{
+            display:none;
+        }
       
     </style>
 </head>
