--- a/login.html
+++ b/login.html
@@ -7,6 +7,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/login.css" text="text/css">
     <script>
+         var checkLoginStatus = function(response) {   // Called after the JS SDK has been initialized.
+        console.log(response);
+        if(response.status === 'connected'){
+            document.querySelector('#btn_fb').value ='Logout';
+            location.replace('join.html');
+            FB.api('/me',function(res){
+                document.querySelector('#name').innerHTML = 'Welcome, '+res.name;
+            });
+        }else{
+            document.querySelector('#btn_fb').value ='Login';
+            document.querySelector('#name').innerHTML = '';
+        }
+      //statusChangeCallback(response);        // Returns the login status.
+    }
         window.fbAsyncInit = function() {
     FB.init({
       appId      : '330122884751952',
@@ -15,24 +29,19 @@
       version    : 'v8.0'           // Use this Graph API version for this call.
     });
 
-    FB.getLoginStatus(function(response) {   // Called after the JS SDK has been initialized.
-        console.log(response);
-        if(response.status === 'connected'){
-            document.querySelector('#btn_fb').value ='Logout';
-        }else{
-            document.querySelector('#btn_fb').value ='Login';
-        }
-      //statusChangeCallback(response);        // Returns the login status.
-    });
+
+  
+    FB.getLoginStatus(checkLoginStatus);
    
    
 };
 
     </script>
-
+<script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js"></script>
 </head>
 
 <body>
+   
     <div class="header">
         <p>로그인</p>
         <a href="join.html"></a>
@@ -40,7 +49,7 @@
     <div class="headerback">
         <p>로그인</p>
     </div>
-
+   
     <div class="content_login">
         <img src="img/ic_key.svg">
         <form id="frm_login">
@@ -62,7 +71,20 @@
             <p>
                 <span>or</span>
             </p>
-            <button id="btn_fb" class="fcLogin">페이스북으로 로그인</button>
+            <button id="btn_fb" class="fcLogin"  onclick="
+            if(this.value === 'Login'){
+                FB.login(function(res){
+                    console.log(res)
+                    checkLoginStatus(res);
+                });
+            }else{
+                FB.logout(function(res){
+                  console.log( res);
+                  checkLoginStatus(res);
+                });
+            }
+            ">
+                페이스북으로 로그인</button>
             <div>
                 <a href="#">회원가입</a>
             </div>
@@ -84,8 +106,6 @@
 
 
 
-<!-- Load the JS SDK asynchronously -->
-<script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js"></script>
 
 </body>
 
