--- a/map.html
+++ b/map.html
@@ -53,7 +53,7 @@
                     <p style="margin-top:-12px">
                         <em class="link">
                             <a href="javascript:void(0);"
-                                onclick="window.open('http://fiy.daum.net/fiy/map/CsGeneral.daum', '_blank', 'width=981, height=650')">
+                                onclick="window.open('https://fiy.daum.net/fiy/map/CsGeneral.daum', '_blank', 'width=981, height=650')">
                                 혹시 주소 결과가 잘못 나오는 경우에는 여기에 제보해주세요.
                             </a>
                         </em>
