--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                             </a>
                         </em>
                     </p>
-                    <div id="map" style="width:100%;height:350px;"></div>
+                    <div id="map" style="width:100%;height:100%;"></div>
                     <script type="text/javascript"
                         src="https://dapi.kakao.com/v2/maps/sdk.js?appkey=8b6e7d1febec2531cf530da029f11dae&libraries=services"></script>
                     <script>
