--- a/map.html
+++ b/map.html
@@ -17,12 +17,11 @@
     <div class="background">
         <div class="searchbox">
             <a class="back" href="index.html"></a>
-            <form>
+           <form>
             <div class="inputarea f_b">
-                <input type="text" placeholder="밀롱가 이름으로 검색해보세요"
-               
+                <input type="text" placeholder="밀롱가 이름으로 검색해보세요" 
                 >
-                <button type="submit" style="display:none"></button>
+                <button style="display:none"></button>
                 <div>
                     <a href="#">
                         <img src="img/ic_search.png" alt="">
