--- a/calender.html
+++ b/calender.html
@@ -54,8 +54,8 @@
 
     <div class="background">
         <div class="header">
-            <a>
-                <img src="img/logo.png" alt="">
+            <a href="index.html">
+                <img src="img/logo.png" alt="y milonga">
             </a>
         </div>
         <div class="headerback">
