--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script type="text/javascript"
     src="https://dapi.kakao.com/v2/maps/sdk.js?appkey=8b6e7d1febec2531cf530da029f11dae&libraries=services"></script>
     <script type="text/javascript" src="https://dapi.kakao.com/v2/maps/sdk.js?appkey=8b6e7d1febec2531cf530da029f11dae"></script>
+    <script type="text/javascript" src="https://dapi.kakao.com/v2/maps/sdk.js?appkey=8b6e7d1febec2531cf530da029f11dae&libraries=services"></script>
     <script src="js/active.js"></script>
    
     <title>Document</title>
@@ -19,8 +20,8 @@
             <img src="img/logo.png" alt="">
         </a>
         <div class="location f_b">
-            <span>현위치 : 서초구 서초동</span>
-            <button class="f_a">
+            <span id="hereNow">현위치 : 서울특별시 서초구 서초동</span>
+            <button class="hereBtn f_a">
                 <img src="img/ic_location.png" alt=""> 업데이트
             </button>
         </div>
