--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         </div>
     </div>
     </div>
-    <div class="footLink f_b">
+    <div class="footLink">
         <a class="home" href="index.html">&milonga</a>
         <a class="search" href="join.html">나의 밀롱가</a>
         <a class="about" href="help.html">도움말</a>
