set map and index page only

--- a/index.html
+++ b/index.html
@@ -16,9 +16,17 @@
 
 <body>
     <div class="header">
-        <a href="index.html">
-            <img src="img/logo.png" alt="">
+        <div class="morebox f_b">
+        <a class="logo" href="index.html">
+            <img src="img/logo.png" alt="logo">
         </a>
+        <a class="moremap" href="map.html">
+            <div class="desc">
+            <img src="img/ic_mapView.png" alt="mapView"><br />
+            <span>지도로 더보기</span>
+        </div>
+        </a>
+        </div>
         <div class="location f_b">
             <span id="hereNow">현위치 : 서울특별시 서초구 서초동</span>
             <button class="hereBtn f_a">
@@ -106,20 +114,9 @@
                     <b>Chrome 브라우저는 https 환경에서만 geolocation을 지원합니다.</b> 참고해주세요.
                 </p>
 
-            </div>
-            <div class="morebox f_b">
-                <a class="morelist" href="calender.html">
-                    달력으로 더보기
-                </a>
-                <a class="moremap" href="map.html">지도로 더보기</a>
-            </div>
+            </div>          
         </div>
     </div>
-    </div>
-    <div class="footLink f_b">
-        <a class="home" href="index.html">&milonga</a>
-        <a class="search" href="join.html">나의 밀롱가</a>
-        <a class="about" href="help.html">도움말</a>
     </div>
    
 </body>
