change map size

--- a/map.html
+++ b/map.html
@@ -61,8 +61,10 @@
                 </div>
 
                 <div class="map">
-                    <div id="map" style="width:100%;height:100vh;"></div>
-                    <p style="margin-top:12px">
+                    <div id="map" style="width:100%;height:80vh;"></div>                   
+                </div>
+                <div class="mapInfo">
+                    <p>
                         <em class="link">
                             <a href="javascript:void(0);"
                                 onclick="window.open('https://fiy.daum.net/fiy/map/CsGeneral.daum', '_blank', 'width=981, height=650')">
@@ -70,11 +72,9 @@
                             </a>
                         </em>
                     </p>
-                    <p>
-                        <b>Chrome 브라우저는 https 환경에서만 geolocation을 지원합니다.</b> 참고해주세요.
-                    </p>
-
-                </div>
+                    <p>                        Chrome 브라우저는 https 환경에서만 geolocation을 지원합니다.
+                    </p>        
+                </div> 
             </div>
         </div>
     </div>
