fix drag dbClick problem

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script type="text/javascript"
         src="https://dapi.kakao.com/v2/maps/sdk.js?appkey=8b6e7d1febec2531cf530da029f11dae&libraries=services"></script>
     <script type="text/javascript"
-        src="https://dapi.kakao.com/v2/maps/sdk.js?appkey=8b6e7d1febec2531cf530da029f11dae"></script>
+        src="https://dapi.kakao.com/v2/maps/sdk.js?appkey=8b6e7d1febec2531cf530da029f11dae"></script>   
     <script src="js/active.js"></script>
     <title>Document</title>
 </head>
@@ -84,8 +84,10 @@
                     <div id="map" style="width:100%;height:35vh;"></div>
                 </div>
             </div>
-            <div class="listbox f_a">
-                <ul class="items"></ul>
+            <div class="slider f_a">
+                <div class="listbox">
+                    <ul class="items"></ul>
+                </div>
             </div>
             <div class="mapInfo">
                 <p>
