--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         src="https://dapi.kakao.com/v2/maps/sdk.js?appkey=8b6e7d1febec2531cf530da029f11dae&libraries=services"></script>
     <script type="text/javascript"
         src="https://dapi.kakao.com/v2/maps/sdk.js?appkey=8b6e7d1febec2531cf530da029f11dae"></script>   
-    <script src="js/active.js"></script>
+    <script src="/dist/active.js"></script>
     <title>Document</title>
 </head>
 <body>
