--- a/map.html
+++ b/map.html
@@ -8,7 +8,7 @@
         src="https://dapi.kakao.com/v2/maps/sdk.js?appkey=d2a50583f7c8076b96767a5364a8a1c0&libraries=services"></script>
     <script type="text/javascript"
         src="https://dapi.kakao.com/v2/maps/sdk.js?appkey=d2a50583f7c8076b96767a5364a8a1c0"></script>
-    <script src="/dist/map.js"></script>
+    <script src="/map.js"></script>
     <title>Document</title>
 </head>
 <body>
