--- a/map.html
+++ b/map.html
@@ -1,86 +1,93 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/map.css" text="text/css">
-    <script type="text/javascript"
-        src="https://dapi.kakao.com/v2/maps/sdk.js?appkey=d2a50583f7c8076b96767a5364a8a1c0&libraries=services" ></script>
-    <script type="text/javascript"
-        src="https://dapi.kakao.com/v2/maps/sdk.js?appkey=d2a50583f7c8076b96767a5364a8a1c0" ></script>
-    <script src="dist/map.js" ></script>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/map.css" text="text/css" />
     <title>ymillonga</title>
-</head>
-<body>
+  </head>
+  <body>
     <div>
-    <div class="background">
+      <div class="background">
         <header class="searchbox">
-            <a class="back" href="index.html"></a>
-            <form>
-                <div class="inputarea f_b">
-                    <input type="text" placeholder="밀롱가 이름으로 검색해보세요">
-                    <button style="display:none"></button>
-                    <div>
-                        <a id="findMe">
-                            <img src="img/ic_search.png" alt="">
-                        </a>
-                    </div>
-                </div>
-            </form>
+          <a class="back" href="index.html"></a>
+          <form>
+            <div class="inputarea f_b">
+              <input type="text" placeholder="밀롱가 이름으로 검색해보세요" />
+              <button style="display: none"></button>
+              <div>
+                <a id="findMe">
+                  <img src="img/ic_search.png" alt="" />
+                </a>
+              </div>
+            </div>
+          </form>
         </header>
         <main class="nearbox">
-            <div class="mapbox">
-                <section class="distance f_a">
-                    <div class="nearby">
-                        <h3>내주변 밀롱가</h3>
-                        <p>
-                            <span id="mapLevel"> 지도 확대영역 : 250m</span>
-                        </p>
-                        <div class="location">
-                            <span id="hereNow">현위치 : 서울특별시 서초구 서초동</span>
-                        </div>
-                    </div>
-                    <div class="level f_a">
-                        <a>
-                            <p>30m</p>
-                        </a>
-                        <a>
-                            <p>100m</p>
-                        </a>
-                        <a>
-                            <p>500m</p>
-                        </a>
-                        <a>
-                            <p>2km</p>
-                        </a>
-                        <a>
-                            <p>8km</p>
-                        </a>
-                    </div>
-                </section>
-                <section class="map">
-                    <div id="map" style="width:100%;height:80vh;"></div>
-                </section>
-                <section class="mapInfo">
-                    <p>
-                        <em class="link">
-                            <a href="javascript:void(0);"
-                                onclick="window.open('https://fiy.daum.net/fiy/map/CsGeneral.daum', '_blank', 'width=981, height=650')">
-                                혹시 주소 결과가 잘못 나오는 경우에는 여기에 제보해주세요.
-                            </a>
-                        </em>
-                    </p>
-                    <p>                        Chrome 브라우저는 https 환경에서만 geolocation을 지원합니다.
-                    </p>
-                </section>
-            </div>
+          <div class="mapbox">
+            <section class="distance f_a">
+              <div class="nearby">
+                <h3>내주변 밀롱가</h3>
+                <p>
+                  <span id="mapLevel"> 지도 확대영역 : 250m</span>
+                </p>
+                <div class="location">
+                  <span id="hereNow">현위치 : 서울특별시 서초구 서초동</span>
+                </div>
+              </div>
+              <div class="level f_a">
+                <a>
+                  <p>30m</p>
+                </a>
+                <a>
+                  <p>100m</p>
+                </a>
+                <a>
+                  <p>500m</p>
+                </a>
+                <a>
+                  <p>2km</p>
+                </a>
+                <a>
+                  <p>8km</p>
+                </a>
+              </div>
+            </section>
+            <section class="map">
+              <div id="map" style="width: 100%; height: 80vh"></div>
+            </section>
+            <section class="mapInfo">
+              <p>
+                <em class="link">
+                  <a
+                    href="javascript:void(0);"
+                    onclick="window.open('https://fiy.daum.net/fiy/map/CsGeneral.daum', '_blank', 'width=981, height=650')"
+                  >
+                    혹시 주소 결과가 잘못 나오는 경우에는 여기에 제보해주세요.
+                  </a>
+                </em>
+              </p>
+              <p>
+                Chrome 브라우저는 https 환경에서만 geolocation을 지원합니다.
+              </p>
+            </section>
+          </div>
         </main>
-    </div>
-    <footer class="slider">
+      </div>
+      <footer class="slider">
         <div class="listbox">
-            <ul class="items"></ul>
+          <ul class="items"></ul>
         </div>
-    </footer>
-</div>
-</body>
+      </footer>
+      <script
+        type="text/javascript"
+        src="https://dapi.kakao.com/v2/maps/sdk.js?appkey=d2a50583f7c8076b96767a5364a8a1c0&libraries=services"
+      ></script>
+      <script
+        type="text/javascript"
+        src="https://dapi.kakao.com/v2/maps/sdk.js?appkey=d2a50583f7c8076b96767a5364a8a1c0"
+      ></script>
+      <script src="dist/map.js"></script>
+    </div>
+  </body>
 </html>
